# pact

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GETTING_STARTED.md  README.md  SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  edge-release.yml  release.yml
crates/agentyard-agents/: Cargo.toml
crates/agentyard-agents/src/: adapter.rs  claude_code.rs  codex.rs  copilot.rs  event.rs  lib.rs  process.rs
crates/agentyard-cli/: Cargo.toml
crates/agentyard-cli/src/: main.rs
crates/agentyard-coord/: Cargo.toml
crates/agentyard-coord/src/: db.rs  leases.rs  lib.rs  server.rs
crates/agentyard-core/: Cargo.toml
crates/agentyard-core/src/: lib.rs
crates/agentyard-deps/: Cargo.toml
crates/agentyard-deps/src/: detect.rs  lib.rs  passthrough.rs  store.rs
crates/agentyard-vcs/: Cargo.toml
crates/agentyard-vcs/src/: lib.rs  lock.rs
crates/pact-agents/: Cargo.toml
crates/pact-agents/examples/: group_kill_check.rs
crates/pact-agents/src/: adapter.rs  claude_code.rs  codex.rs  copilot.rs  event.rs  gemini.rs  lib.rs  process.rs  supervisor.rs
crates/pact-agents/tests/: group_kill.rs
crates/pact-cli/: Cargo.toml  build.rs
crates/pact-cli/src/: main.rs
crates/pact-cli/tests/: completions.rs  doctor.rs  history.rs  list_agent_pid.rs  merge_all_exit_code.rs  require_passing_tests.rs  resolve.rs  spawn_dry_run.rs  version_flag.rs
crates/pact-coord/: Cargo.toml
crates/pact-coord/src/: db.rs  leases.rs  lib.rs  messages.rs  operations.rs  persisted_conflicts.rs  server.rs
crates/pact-core/: Cargo.toml
crates/pact-core/src/: lib.rs
crates/pact-deps/: Cargo.toml
crates/pact-deps/src/: cmdutil.rs  detect.rs  lib.rs  passthrough.rs  store.rs
crates/pact-vcs/: Cargo.toml
crates/pact-vcs/src/: lib.rs  lock.rs
crates/pact-vcs/tests/: merge_all.rs  require_passing_tests.rs  resolve_conflict.rs
docs/: render_demo.py
examples/tasks/: README.md  add-routes.md  migrate-api.md  refactor-files.md
