[workspace]
resolver = "2"
members = [
    "crates/agentyard-vcs",
    "crates/agentyard-deps",
    "crates/agentyard-coord",
    "crates/agentyard-agents",
    "crates/agentyard-core",
    "crates/agentyard-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
sha2 = "0.10"
reflink-copy = "0.1"
walkdir = "2"
ctrlc = "3"

agentyard-vcs = { path = "crates/agentyard-vcs" }
agentyard-deps = { path = "crates/agentyard-deps" }
agentyard-coord = { path = "crates/agentyard-coord" }
agentyard-agents = { path = "crates/agentyard-agents" }
agentyard-core = { path = "crates/agentyard-core" }
