[workspace]
resolver = "2"
members = [
    "crates/pact-vcs",
    "crates/pact-deps",
    "crates/pact-coord",
    "crates/pact-agents",
    "crates/pact-core",
    "crates/pact-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "io-util", "io-std"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
sha2 = "0.10"
reflink-copy = "0.1"
walkdir = "2"
ctrlc = "3"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "schemars"] }
rusqlite = { version = "0.32", features = ["bundled"] }
globset = "0.4"
dirs = "5"
schemars = "1"

pact-vcs = { path = "crates/pact-vcs" }
pact-deps = { path = "crates/pact-deps" }
pact-coord = { path = "crates/pact-coord" }
pact-agents = { path = "crates/pact-agents" }
pact-core = { path = "crates/pact-core" }
