[package]
name = "agentyard-coord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
globset.workspace = true
walkdir.workspace = true
dirs.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
