[package]
name = "pact-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pact"
path = "src/main.rs"

[dependencies]
pact-core.workspace = true
pact-agents.workspace = true
pact-coord.workspace = true
pact-deps.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[dev-dependencies]
pact-vcs.workspace = true
uuid.workspace = true
