[package]
name = "pact-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pact-vcs.workspace = true
pact-deps.workspace = true
pact-agents.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
pact-coord.workspace = true
